Fix timer rectangle size using fontMetrics width/height and translated text lengths Patch from http://forum.kde.org/kourse-patch-bug-175186-timer-rectangle-too-small-t-22850.html + Small fix (margins)

BUG: 175186

svn path=/trunk/KDE/kdegraphics/ksnapshot/; revision=936956